--- a/style.css
+++ b/style.css
@@ -22,20 +22,20 @@
   width: 600px;
   margin: 30px auto;
   /* border: 7.5px ridge;
-  border-color: #ffbf00; */
-  /* border-right: solid 3px;
+  border-color: #ffbf00;
+  border-right: solid 3px wheat;
   border-color: wheat;
-  border-left: solid 3px;
+  border-left: solid 3px wheat;
   border-color: wheat; */
 }
 /* main container within article */
 .container {
   display: flex;
   gap: 20px;
-  border-right: solid 2px;
-  border-color: #ffbf00;
-  border-left: solid 2px;
-  border-color: #ffbf00;
+  border-right: solid 2px #ffbf00;
+  /* border-color: #ffbf00; */
+  border-left: solid 2px #ffbf00;
+  /* border-color: #ffbf00; */
 }
 
 /* img of product (shoe) */
