Grid layout - fixed borders

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@
 }
 
 /* grid layout instead of flexbox */
-/* .product {
+.product {
   display: grid;
   grid-template-columns: 200px 1fr 1fr;
   column-gap: 20px;
@@ -141,4 +141,4 @@
 
 .add-cart {
   grid-column: 1/-1;
-} */
+}
